grammar.js
		root:               $ => optional(choice(
			$.program,
			$.library,
			$.package,
			$.unit,
			$._definitions // For include files
		)),

		// HIGH LEVEL ----------------------------------------------------------

		package:            $ => seq(
			$.kPackage, $.moduleName, ';',
			optional($.packageRequires),
			optional($.packageContains),
			$.kEndDot
		),

		packageRequires:    $ => seq($.kRequires, delimited($.moduleName), ';'),

		packageContains:    $ => seq(
			$.kContains,
			delimited($.packageContainsItem),
			optional(';')
		),

		packageContainsItem: $ => choice(
			prec.right(1, seq($.moduleName, 'in', $.literalString)),
			$.moduleName
		),

		moduleName:      $ => delimited1($.identifier, $.kDot),

		// STATEMENTS ---------------------------------------------------------

		...statements(false),
		...statements(true),

		_expr:           $ => choice(
			$._ref, $.exprBinary, $.exprUnary
		),

		type:            $ => pp($,choice(
			$.typeref,
			$.declMetaClass,
			$.declEnum,
			$.declSet,
			$.declArray,
			$.declFile,
			$.declString,
			$.declProcRef,
		)),

		typeref:         $ => seq(
			...enable_if(fpc, field('_dummy', optional($.kSpecialize))),
			$._typeref,
			...enable_if(delphi, optional(seq($.kDeprecated, $._expr))),
		),

		_typeref:        $ => choice(
			$.identifier, $.typerefDot,
			...enable_if(templates, $.typerefTpl),
			$.typerefPtr,
		),

		_genericName:    $ => choice(
			$.identifier, $.genericDot, ...enable_if(templates, $.genericTpl)
		),
		literalString:   $ => repeat1($._literalString),
		_literalString:  $ => choice(/'[^']*'/, $.literalChar),
		_definitions:    $ => repeat1($._definition),
		declTypes:       $ => seq(
			$.kType,
			repeat($.declType)
		),

		declType:        $ => seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			...enable_if(fpc, optional($.kGeneric)),
			field('name', $._genericName), $.kEq,
			field('type',
				choice(
					seq(optional($.kType), $.type),
					choice($.type),
					$.declClass,
					$.declIntf,
					$.declHelper,
				)
			),
			';',
			repeat($._procAttribute)
		),

		declClass:       $ => seq(
			optional($.kPacked),
			choice(
				$.kClass, seq($.kManaged, $.kRecord), $.kRecord, $.kObject,
				...enable_if(objc,
					$.kObjcclass, $.kObjccategory, $.kObjcprotocol
				)
			),
			optional(choice(
				$.kAbstract, $.kSealed,
				...enable_if(objc,
					seq($.kExternal, optional(seq($.kName, $._expr)))
				)
			)),
			field('parent', optional(seq('(',delimited($.typeref),')'))),
			optional($._declClass)
		),

		_declClass:      $ => seq(
			optional($._declFields),
			optional($._classDeclarations),
			repeat($.declSection),
			optional($.declVariant),
			$.kEnd
		),

		declField:       $ =>  seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			field('name', delimited1($.identifier)),
			':',
			field('type', $.type),
			field('defaultValue', optional($.defaultValue)),
			';'
		),

		_procAttribute:  $ => /*pp($,*/choice(
			seq(field('attribute', $.procAttribute), ';'),
			// FPC-specific syntax, e.g. procedure myproc; [public; alias:'bla'; cdecl];
			...enable_if(fpc, seq(
				'[',
				delimited(field('attribute', choice($.procAttribute, $.procExternal))),
				']', ';'
			))
		)/*)*/,
		kPackage:          $ => /package/i,
		kRequires:         $ => /requires/i,
		kContains:         $ => /contains/i,
		kEndDot:           $ => '.',

		kEnd:              $ => /end/i,
		kType:             $ => /type/i,
		kRecord:           $ => /record/i,
		kManaged:          $ => /managed/i,
		kEq:               $ => '=',
		identifier:        $ => /[&]?[a-zA-Z_]+[0-9_a-zA-Z]*/,
